--- a/chanllenge Encriptador/css/style.css
+++ b/chanllenge Encriptador/css/style.css
@@ -380,62 +380,44 @@ strong {
   }
 }
 
+@keyframes blink {
+  0%, 100% { height: 100%; }
+  50% { height: 0; }
+}
+
 .wrapper {
-  display: none;
+  display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
+  height: 100%;
   gap: .5rem;
-  height: 10%;
   position: relative;
 }
-
 .eye {
-  border: 1px solid rgb(221, 221, 221);
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  background: #eee;
-  border-radius: 50%;
-  transform: rotate(var(--radians));
-  transition: transform 300ms cubic-bezier(.64,1.95,.64,1);
   position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: white;
+  overflow: hidden;
 }
 
-#eye1 {
-  justify-self: end;
-}
-  
 .pupil {
-  display: block;
+  position: absolute;
   width: 30px;
   height: 30px;
-  background: #111;
+  background: black;
   border-radius: 50%;
-  transition: transform 100ms linear;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@keyframes blink {
-  0%, 100% {
-    height: 50px;
-  }
-  50% {
-    height: 0;
-  }
+.eye.blinking .pupil {
+  animation: blink 0.2s steps(1, end) infinite;
 }
 
-.eye::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #eee;
-  border-radius: 50%;
-  animation: blink 5s infinite;
-  transform-origin: center;
-}
 
 
 .area-encrypted-title{
