--- a/chanllenge Encriptador/css/style.css
+++ b/chanllenge Encriptador/css/style.css
@@ -289,6 +289,7 @@ strong {
   border-radius: 5px;
   position: absolute;
   left: -9.5%;
+  z-index: -1000;
 }
 
 .area-encrypted-content {
@@ -390,7 +391,7 @@ strong {
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 50%;
   gap: .5rem;
   position: relative;
 }
@@ -418,12 +419,11 @@ strong {
   animation: blink 0.2s steps(1, end) infinite;
 }
 
-
-
 .area-encrypted-title{
   margin: 0 auto;
   width: 80%;
 }
+
 .main-title{
   font-size: var(--h1-font-size);
 }
@@ -501,17 +501,17 @@ strong {
   text-align: center;
 }
 
-
-
-
 /* Wrapper em display grid abaixo de 800px */
 @media screen and (max-width: 799px) {
   .wrapper {
     display: grid;
+    height: 90%;
   }
-
   .eyes {
     display: none;
+  }
+  .button-message {
+    height: 90px;
   }
 }
 
@@ -520,7 +520,6 @@ strong {
   .wrapper {
     display: none;
   }
-
   .eyes {
     display: flex;
   }
@@ -532,7 +531,7 @@ strong {
     width: 300px;
   }
   .area-encrypted-content {
-    width: 390px;
+    width: 400px;
   }
   .area-encrypted-title,
   .main-title {
@@ -593,9 +592,6 @@ strong {
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
   }
-}
-
-@media screen and (min-width: 1100px) {
 }
 
 @media screen and (max-width: 1100px) { 
