fix: :bug: correção no tramanho do titulo do layout griptografia

--- a/chanllenge Encriptador/css/style.css
+++ b/chanllenge Encriptador/css/style.css
@@ -533,6 +533,7 @@ strong {
   .area-encrypted-content {
     width: 350px; 
   }
+  .main-title {
   
   .area-encrypted-title {
     margin: 0 auto;
