feat: :hammer: Removendo e modificando resize do textarea no CSS

--- a/chanllenge Encriptador/css/style.css
+++ b/chanllenge Encriptador/css/style.css
@@ -234,6 +234,10 @@ strong {
   color:var(--terceira-color)
 }
 
+textarea {
+  resize: none;
+}
+
 #message::-webkit-input-placeholder {
   padding-top: 20px;
   border: none;
