refactor: :hammer: melhorando e ajustando definindo um estilo tamanho da fonte do elemento e previnindo evento do botão no JavaScript

--- a/chanllenge Encriptador/css/style.css
+++ b/chanllenge Encriptador/css/style.css
@@ -725,4 +725,7 @@ background-color: var(--primeira-cor-lighter);
   .area-encrypted {
     inset: -2.5% 15%;
   }
+  .main-title {
+    word-break: none ;
+  }
 }
